# angular-bazel-proto

./: .bazelrc  .gitignore  README.md  WORKSPACE
frontend/: angular.json  angular.json.bak  package-lock.json  package.json
frontend/e2e/: BUILD.bazel
frontend/src/: BUILD.bazel
frontend/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
frontend/src/app/modules/landing/: landing.module.ts
frontend/src/app/modules/landing/pages/landing/: landing.component.spec.ts  landing.component.ts
proto/api/v1/: BUILD.bazel  api.proto
